html structure adde

--- a/index.html
+++ b/index.html
@@ -29,7 +29,46 @@
     <!--header section start-->
     <!--main section start-->
     <main>
-
+      <div class="carousel-container">
+        <ul class="carousel">
+          <li class="slide1">
+            <figure>
+              <img src="./assets/image/carousel/1.jpg" alt="Slide 1" />
+            </figure>
+            <div class="slide-controls">
+              <button class="left-btn control-btn"></button>
+              <p class="slide1-info">
+                we meet your financial investment needs
+              </p>
+              <button class="right-btn control-btn"></button>
+            </div>
+          </li>
+          <li class="slide2">
+            <figure>
+              <img src="./assets/image/carousel/2.jpg" alt="Slide 2" />
+            </figure>
+            <div class="slide-controls">
+              <button class="left-btn control-btn"></button>
+              <p class="slide1-info">
+                we meet your financial investment needs
+              </p>
+              <button class="right-btn control-btn"></button>
+            </div>
+          </li>
+          <li class="slide3">
+            <figure>
+              <img src="./assets/image/carousel/3.jpg" alt="Slide 3" />
+            </figure>
+            <div class="slide-controls">
+              <button class="left-btn control-btn"></button>
+              <p class="slide1-info">
+                we meet your financial investment needs
+              </p>
+              <button class="right-btn control-btn"></button>
+            </div>
+          </li>
+        </ul>
+      </div>
     </main>
     <!--main section end-->
 
