image path changed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <ul class="carousel">
           <li class="slide1">
             <figure>
-              <img src="./assets/image/carousel/1.jpg" alt="Slide 1" />
+              <img src="./assets/image/1.jpg" alt="Slide 1" />
             </figure>
             <div class="slide-controls">
               <button class="left-btn control-btn"></button>
@@ -45,7 +45,7 @@
           </li>
           <li class="slide2">
             <figure>
-              <img src="./assets/image/carousel/2.jpg" alt="Slide 2" />
+              <img src="./assets/image/2.jpg" alt="Slide 2" />
             </figure>
             <div class="slide-controls">
               <button class="left-btn control-btn"></button>
@@ -57,7 +57,7 @@
           </li>
           <li class="slide3">
             <figure>
-              <img src="./assets/image/carousel/3.jpg" alt="Slide 3" />
+              <img src="./assets/image/3.jpg" alt="Slide 3" />
             </figure>
             <div class="slide-controls">
               <button class="left-btn control-btn"></button>
