jQuery added and control section structure changed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- If multi-language site, reconsider usage of html lang declaration here. -->
-<html lang="en"> 
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -13,10 +13,11 @@
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
   <!--font-awesome link for icons-->
-  <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css" >
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <!-- jquery link for functionalities -->
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
-  <link rel="stylesheet" media="screen" href="assets/css/style.css" >
+  <link rel="stylesheet" media="screen" href="assets/css/style.css">
 </head>
 
 <body>
@@ -24,7 +25,7 @@
   <div class="container">
     <!--header section start-->
     <header>
-      
+
     </header>
     <!--header section start-->
     <!--main section start-->
@@ -35,45 +36,34 @@
             <figure>
               <img src="./assets/image/1.jpg" alt="Slide 1" />
             </figure>
-            <div class="slide-controls">
-              <button class="left-btn control-btn"></button>
-              <p class="slide1-info">
-                we meet your financial investment needs
-              </p>
-              <button class="right-btn control-btn"></button>
-            </div>
+
           </li>
           <li class="slide2">
             <figure>
               <img src="./assets/image/2.jpg" alt="Slide 2" />
             </figure>
-            <div class="slide-controls">
-              <button class="left-btn control-btn"></button>
-              <p class="slide1-info">
-                we meet your financial investment needs
-              </p>
-              <button class="right-btn control-btn"></button>
-            </div>
+
           </li>
           <li class="slide3">
             <figure>
               <img src="./assets/image/3.jpg" alt="Slide 3" />
             </figure>
-            <div class="slide-controls">
-              <button class="left-btn control-btn"></button>
-              <p class="slide1-info">
-                we meet your financial investment needs
-              </p>
-              <button class="right-btn control-btn"></button>
-            </div>
+
           </li>
         </ul>
+        <div class="slide-controls">
+          <button class="left-btn control-btn"></button>
+          <p class="slide1-info">
+            we meet your financial investment needs
+          </p>
+          <button class="right-btn control-btn"></button>
+        </div>
       </div>
     </main>
     <!--main section end-->
 
     <!--footer section start-->
-    <footer>      
+    <footer>
 
     </footer>
     <!--footer section end-->
@@ -82,4 +72,5 @@
   <!--container end-->
   <script src="assets/js/script.js"></script>
 </body>
+
 </html>
