slides classe added

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <main>
       <div class="carousel-container">
         <ul class="carousel">
-          <li class="slide1">
+          <li class="slide1 slides show">
             <figure>
               <img src="./assets/image/1.jpg" alt="Slide 1" />
             </figure>
 
           </li>
-          <li class="slide2">
+          <li class="slide2 slides">
             <figure>
               <img src="./assets/image/2.jpg" alt="Slide 2" />
             </figure>
 
           </li>
-          <li class="slide3">
+          <li class="slide3 slides">
             <figure>
               <img src="./assets/image/3.jpg" alt="Slide 3" />
             </figure>
